started webpage in html

--- a/webpage.html
+++ b/webpage.html
@@ -1,6 +1,19 @@
 <html>
     <body>
         <h1>PearSphere</h1>
-        <p>Courses<p>
     </body>
+    <form action="action_page.php" method="post">
+        <div class="container">
+          <label for="uname"><b>Username</b></label>
+          <input type="text" placeholder="Enter Username" name="uname" required>
+      
+          <label for="psw"><b>Password</b></label>
+          <input type="password" placeholder="Enter Password" name="psw" required>
+      
+          <button type="submit">Login</button>
+          <label>
+            <input type="checkbox" checked="checked" name="remember"> Remember me
+          </label>
+        </div>
+      </form>
 </html>
