--- a/webpage.html
+++ b/webpage.html
@@ -1,20 +1,35 @@
-start
 <html>
+<head>
+<style>
+h1 {
+    text-align: center;
+}
+
+div {
+    padding: 5%;
+    text-align: center
+}
+</style>
+</head>
+    <h1 align="center">PearSphere</h1>
     <body>
-        <h1>PearSphere</h1>
-    </body>
     <form action="action_page.php" method="post">
         <div class="container">
-          <label for="uname"><b>Username</b></label>
-          <input type="text" placeholder="Enter Username" name="uname" required>
-      
-          <label for="psw"><b>Password</b></label>
-          <input type="password" placeholder="Enter Password" name="psw" required>
-      
+          <input type="text" placeholder="Username" name="uname" required>
+        </div>
+        <div class="container">
+          <input type="password" placeholder="Password" name="psw" required>
+        </div>
+        <div class="container">
+            <label>
+              <a href="https://www.w3schools.com/"></a> Forgot Password? </a>
+            </label>
+            <label>
+              <input type="checkbox" checked="checked" name="remember"> Remember me
+            </label>
+        <div class="container">
           <button type="submit">Login</button>
-          <label>
-            <input type="checkbox" checked="checked" name="remember"> Remember me
-          </label>
         </div>
       </form>
+    </body>
 </html>
