--- a/webpage.html
+++ b/webpage.html
@@ -1,24 +1,65 @@
 <html>
-    <body>
-        <h1 style="font-family:verdana;"> PearSphere </h1>
-    </body>
-    <form action="/login" method="post">
+<head>
+<style>
+    body {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        margin: 0;
+    }
+
+    h1 {
+        text-align: center;
+    }
+
+    .container {
+        width: 300px;
+        border: 5px solid lightblue;
+        padding: 20px;
+        margin: 10px auto;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    input {
+        width: 100%;
+        padding: 10px;
+        margin: 5px 0;
+    }
+
+    button {
+        width: 100%;
+        padding: 10px;
+        background-color: lightblue;
+        border: none;
+        cursor: pointer;
+    }
+
+    button:hover {
+        background-color: deepskyblue;
+    }
+</style>
+</head>
+<body>
+    <h1>PeerSphere</h1>
+    <form action="action_page.php" method="post">
         <div class="container">
-          <label for="uname"><b>Username</b></label>
-          <input type="text" placeholder="Enter Username" name="uname" required padding-right: 30px;>
-        <div>
-        
-        <div class = "container">
-          <label for="psw"><b>Password</b></label>
-          <input type="password" placeholder="Enter Password" name="psw" required>
-          <button type="submit">Login</button>
-          <label>
+            <input type="text" placeholder="Username" name="uname" required>
+            <input type="password" placeholder="Password" name="psw" required>
         </div>
-
-        <div class = "container">
-            <input type="checkbox" checked="checked" name="remember"> Remember me
-          </label>
+        <div class="container">
+            <label>
+              <a>Forgot Password?</a>
+              <input type="checkbox" checked="checked" name="remember"> Remember me
+            </label>
         </div>
-
-      </form>
+        <div class="container">
+            <button type="submit">Login</button>
+        </div>
+    </form>
+</body>
 </html>
