--- a/webpage.html
+++ b/webpage.html
@@ -42,6 +42,11 @@
     button:hover {
         background-color: deepskyblue;
     }
+
+    label {
+        display: center
+    }
+
 </style>
 </head>
 <body>
@@ -54,7 +59,7 @@
         <div class="container">
             <label>
               <a>Forgot Password?</a>
-              <input type="checkbox" checked="checked" name="remember"> Remember me
+              <input type="checkbox" checked="checked" name="remember"> Remember Me
             </label>
         </div>
         <div class="container">
