--- a/webpage.html
+++ b/webpage.html
@@ -17,7 +17,7 @@
     .container {
         width: 350px;
         padding: 20px;
-        margin: 10px auto;
+        margin: 0 px;
         text-align: center;
         display: flex;
         flex-direction: column;
