--- a/webpage.html
+++ b/webpage.html
@@ -26,7 +26,7 @@
     input[type="text"], input[type="password"] {
         width: 100%;
         padding: 15px;
-        margin: 5px 0;
+        margin: 5px;
         font-size: 16px;
         height: 40px;
         box-sizing: border-box;
