--- a/main_page.html
+++ b/main_page.html
@@ -80,7 +80,7 @@
             right: 20px;
             width: 60px;
             height: 60px;
-            background: black;
+            background: rgb(47, 47, 47);
             color: white;
             border-radius: 50%;
             font-size: 40px;
