refined scheduling page

--- a/login_page.html
+++ b/login_page.html
@@ -1,73 +1,75 @@
+<!DOCTYPE html>
 <html>
 <head>
-<style>
-    body {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        margin: 0;
-    }
-    h1 {
-        text-align: center;
-        margin-bottom: 5px;
-        font-family: Courier, monospace;
-    }
-    .container {
-        width: 350px;
-        padding: 20px;
-        margin: 0 px;
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    input[type="text"], input[type="password"] {
-        width: 100%;
-        padding: 15px;
-        margin: 5px;
-        font-size: 16px;
-        height: 40px;
-        box-sizing: border-box;
-        font-family: Courier, monospace;
-    }
-    button {
-        width: 100%;
-        padding: 10px;
-        background-color: lightblue;
-        border: none;
-        cursor: pointer;
-        font-size: 18px;
-        margin-top: 15px;
-        font-family: Courier, monospace;
-    }
-    button:hover {
-        background-color: deepskyblue;
-    }
-    .remember-me {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-top: 5px;
-        font-family: Courier, monospace;
-    }
-    .remember-me label {
-        display: flex;
-        align-items: center;
-        margin-bottom: 8px;
-    }
-    .remember-me input[type="checkbox"] {
-        margin-right: 10px;
-    }
-    .remember-me a {
-        font-family: Courier, monospace;
-        color: rgb(6, 6, 215);
-    }
-    .remember-me a:hover {
-        text-decoration: underline;
-    }
-</style>
+    <title>Login Portal</title>
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+        }
+        h1 {
+            text-align: center;
+            margin-bottom: 5px;
+            font-family: Courier, monospace;
+        }
+        .container {
+            width: 350px;
+            padding: 20px;
+            margin: 0 px;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        input[type="text"], input[type="password"] {
+            width: 100%;
+            padding: 15px;
+            margin: 5px;
+            font-size: 16px;
+            height: 40px;
+            box-sizing: border-box;
+            font-family: Courier, monospace;
+        }
+        button {
+            width: 100%;
+            padding: 10px;
+            background-color: lightblue;
+            border: none;
+            cursor: pointer;
+            font-size: 18px;
+            margin-top: 15px;
+            font-family: Courier, monospace;
+        }
+        button:hover {
+            background-color: deepskyblue;
+        }
+        .remember-me {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-top: 5px;
+            font-family: Courier, monospace;
+        }
+        .remember-me label {
+            display: flex;
+            align-items: center;
+            margin-bottom: 8px;
+        }
+        .remember-me input[type="checkbox"] {
+            margin-right: 10px;
+        }
+        .remember-me a {
+            font-family: Courier, monospace;
+            color: rgb(6, 6, 215);
+        }
+        .remember-me a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
     <h1>PeerSphere</h1>
