--- a/Q&A_page.html
+++ b/Q&A_page.html
@@ -91,6 +91,9 @@
             border: 1px solid #ccc;
             border-radius: 5px;
         }
+        h2 {
+            margin-bottom: 10px;
+        }
     </style>
 </head>
 <body>
