--- a/main_page.html
+++ b/main_page.html
@@ -17,7 +17,7 @@
             padding-bottom: 5px;
         }
         .sidebar {
-            background: #c4c4c4;
+            background: #dbdbdb;
             padding: 20px;
             width: 200px;
             display: flex;
@@ -70,19 +70,20 @@
         }
         .resources {
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
+            grid-template-columns: repeat(3, 200px);
             gap: 20px;
             margin-top: 20px;
         }
         .resource-item {
             background: #e0e0e0;
-            padding: 40px 20px;
+            padding: 20px;
             border-radius: 20px;
             text-align: center;
             font-weight: bold;
-            display: flex;
+            width: 200px;
+            height: 150px;
             justify-content: center;
-            flex-direction: column;
+
         }
         .resource-item > * {
             margin-top: 0;
