fixed resource box layout

--- a/main_page.html
+++ b/main_page.html
@@ -81,9 +81,9 @@
             text-align: center;
             font-weight: bold;
             width: 200px;
-            height: 150px;
+            height: 225px;
             justify-content: center;
-
+            position: relative;
         }
         .resource-item > * {
             margin-top: 0;
